# Robotics-Motion-and-Localization

./: CMakeLists.txt  KalmanFilter.cpp  KalmanFilter.h  MotionNoise.cpp  MotionNoise.h  README.md  Robot.cpp  Robot.h  RobotTests.cpp  RobotTests.h  main.cpp  motion-input-1.txt  motion-input-2.txt
